# opendrive-traffic-simulation

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: github-actions-demo.yml  main.yml
cmake/: FindSDL2_gfx.cmake
scripts/: clang-format.sh
src/: main.cpp  opendrive_parser.cpp  opendrive_parser.hpp  osi_publisher.cpp  osi_publisher.hpp  renderer_sfml.cpp  renderer_sfml.hpp  tsim_map.cpp  tsim_map.hpp  tsim_map_builder.cpp  tsim_map_builder.hpp  tsim_object.cpp  tsim_object.hpp  tsim_simulator.cpp  tsim_simulator.hpp  tsim_util.cpp  tsim_util.hpp
xodr/: Town01.xodr
